# classic-models-mcp

./: .coverage  .dockerignore  .gitignore  Dockerfile  PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg
docs/: AUTHENTICATION.md  CLAUDE_DESKTOP_CONFIG.md  DOCKER.md  README.md  TOOLS.md  TOOL_DOCUMENTATION_GUIDE.md
src/: __init__.py  config.py  server.py
src/api/: __init__.py  auth.py  client.py  types.py
src/mcp/: client.py  config.py  models.py  schemas.py  wrapper.py
src/scripts/: run.py
src/tools/: __init__.py  customers.py  employees.py  example_well_documented.py  offices.py  orderdetails.py  orders.py  payments.py  productlines.py  products.py
tests/: test_api_client.py  test_auth.py  test_client.py  test_config.py  test_server.py  test_tools_customers.py  test_tools_orders.py  test_tools_products.py  test_wrapper.py
