[tool.poetry]
name = "fastmcp-classicmodels"
version = "0.1.0"
description = "A wrapper for the Classic Models API using FastMCP."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastmcp = "^0.1.0"  # Replace with the actual version of FastMCP you intend to use
requests = "^2.25.1"  # Example dependency for making HTTP requests
pydantic = "^1.8.2"  # Example dependency for data validation

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"