[metadata]
name = classic-models-mcp
version = 0.1.0
description = A wrapper for the Classic Models API using FastMCP
author = Your Name
author_email = your.email@example.com
url = https://github.com/jiridj/classic-models-mcp
license = MIT

[options]
packages = find:
install_requires =
    fastmcp
    requests
    pydantic

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
